syntax = "proto3";
option go_package = "grpc-mongo/protos/v1/user";

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc LogIn(LogInRequest) returns (LogInRequest);
}

message User {
    string id = 1;
    string name = 2;
    string gender = 3;
    string email = 4;
}

message SignUpRequest {
    User user = 1;
    string password = 2;
}

message SignUpResponse {
    bool success = 1;
    string message = 2;
}

message LogInRequest {
    string id = 1;
    string password = 2;
}

message LogInResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}